# soba

./: .gitignore  Cargo.toml  README.md  default.nix  packages.json  shell.nix  test.bash
.github/workflows/: ci.yml
src/: dhall.rs  lib.rs  main.rs  nix.rs  psc_package.rs  types.rs  ダル.rs  パケ.rs  系.rs  肉s.rs
