[package]
name = "soba"
version = "0.1.0"
authors = ["justinwoo <moomoowoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"